<resources>
    <string name="app_name">ALevel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_subjectSelection">Selcting Subject</string>
    <string name="menu_uploder">Section</string>
    <string name="menu_paperlist">Paper_list</string>
    <string name="menu_adminhomr">Admin</string>
    <string name="menu_andminlogin">Login</string>
    <string name="menu_displaytimetable">Time Table</string>
    <string name="menu_paperUp">paperUp</string>
    <string name="menu_timtableUpload">Time Table Upload</string>
    <string name="menu_papertype">Paper Type</string>

    <string name="spinner_title">section</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>