<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chanaka.alevel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.chanaka.alevel.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.chanaka.alevel.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_uploader"
        android:name="com.chanaka.alevel.ui.paperUploader.paper_uploader"
        android:label="@string/menu_uploder"
        tools:layout="@layout/fragment_paper_uploader" />
    <fragment
        android:id="@+id/subject_selection"
        android:name="com.chanaka.alevel.ui.paper_selection.subject_selection"
        android:label="@string/menu_subjectSelection"
        tools:layout="@layout/fragment_subject_selection" />
    <fragment
        android:id="@+id/paper_list"
        android:name="com.chanaka.alevel.ui.paper_list.paper_list"
        android:label="@string/menu_paperlist"
        tools:layout="@layout/fragment_paper_list" />
    <fragment
        android:id="@+id/nav_admin_home"
        android:name="com.chanaka.alevel.ui.paperUploader.Admin_home"
        android:label="@string/menu_adminhomr"
        tools:layout="@layout/fragment_admin_home" />
    <fragment
        android:id="@+id/nav_display_timetable"
        android:name="com.chanaka.alevel.ui.paper_list.showtimetable.display_timetable"
        android:label="@string/menu_displaytimetable"
        tools:layout="@layout/fragment_display_timetable" />
    <fragment
        android:id="@+id/nav_admin_login"
        android:name="com.chanaka.alevel.ui.adminLogin.Admin_login"
        android:label="@string/menu_andminlogin"
        tools:layout="@layout/fragment_admin_login" />
</navigation>